--- a/API_Rest-1/pom.xml
+++ b/API_Rest-1/pom.xml
@@ -27,6 +27,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>
