--- a/API_Rest-1/src/main/resources/application.properties
+++ b/API_Rest-1/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gestionservicios?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:Hee4g54D-eB45HAfGg3Ch4Hb65aCB1ge@roundhouse.proxy.rlwy.net:38337/gestionservicios
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Hee4g54D-eB45HAfGg3Ch4Hb65aCB1ge
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 spring.servlet.multipart.enabled=true
+spring.thymeleaf.prefix=classpath:/templates
